Fixed spacing on menu and footer to match content

--- a/wp-content/themes/fastio/css/theme.css
+++ b/wp-content/themes/fastio/css/theme.css
@@ -10327,6 +10327,8 @@ body {
   width: 100%;
   height: 33px;
   line-height: 30px; }
+  .home-footer-wrapper .home-footer, .home-footer-wrapper .main-footer {
+    padding: 0; }
   .home-footer-wrapper footer .wpml-ls {
     padding: 0;
     direction: rtl;
@@ -10460,6 +10462,8 @@ img.ondas {
 nav.navbar.fixed-top {
   padding-top: 2.5rem;
   padding-bottom: 0; }
+  nav.navbar.fixed-top .container {
+    padding: 0; }
 
 .fastio-video {
   position: fixed;
