--- a/wp-content/themes/fastio/sass/theme/_theme.scss
+++ b/wp-content/themes/fastio/sass/theme/_theme.scss
@@ -195,6 +195,9 @@ body{
 	width: 100%;
 	height: 33px;
 	line-height: 30px;
+	.home-footer,.main-footer{
+		padding: 0;
+	}
 	footer{
 		//WPML
 		.wpml-ls{
@@ -374,6 +377,9 @@ img.ondas{
 nav.navbar.fixed-top{
 	padding-top: 2.5rem;
 	padding-bottom: 0;
+	.container{
+		padding: 0;
+	}
 }
 
 // Home FullScreen Vídeo 
